# SharpLsp

./: .cursorrules  .deslop.toml  .editorconfig  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml  Claude.md  Directory.Build.props  LICENSE  Makefile  README.md  build.rs  coverage-thresholds.json  coverlet.runsettings  deployment-toolkit.json  forge.example.toml  opencode.json  rustfmt.toml  sharplsp.example.toml  shipwright.json
.claude/: settings.local.json
.clinerules/: 00-read-claude-md.md  00-read-instructions.md
.config/: nextest.toml
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.github/: SECURITY.md  actionlint.yaml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/codeql/: codeql-config.yml
.github/diagnostics/: pipe-probe.cs
.github/shipwright/: deployment-toolkit.schema.json
.github/workflows/: ci.yml  codeql.yml  dependabot-automerge.yml  deploy-pages.yml  deploy-website.yml  publish-vsix.yml  release.yml
.sharplsp/profiles/: trace-1610.nettrace  trace-1610.speedscope.json  trace-21288.nettrace  trace-21288.speedscope.json  trace-423.nettrace  trace-426.nettrace  trace-48144.nettrace  trace-48144.speedscope.json  trace-62946.nettrace  trace-62946.speedscope.json  trace-69529.nettrace  trace-69529.speedscope.json  trace-7161.nettrace  trace-7161.speedscope.json  trace-77731.nettrace  trace-77731.speedscope.json  trace-83755.nettrace  trace-83755.speedscope.json  trace-87598.nettrace  trace-87598.speedscope.json
docs/: TODO.md  forge-spec.docx
docs/bugs/: BUILD-GENERATEDEPSFILE-LOCK-BUG.md
docs/designs/: DESIGN.md  code.html
docs/formatting/: README.md
docs/plans/: BROKEN-FEATURES.md  BUILD_TIME_OPTIMISATION.md  CODE-INTELLIGENCE-PLAN.md  CSDEVKIT-PARITY-PLAN.md  DEBUGGING-PLAN.md  DEFINITION-PLAN.md  DIAGNOSTICS-PLAN.md  DIAGNOSTICS-STATIC-ANALYZERS-PLAN.md  DISTRIBUTION-PLAN.md  FSHARP-FEATURES-PLAN.md  FSHARP-FSAC-PARITY-PLAN.md  HOVER-PLAN.md  INFRASTRUCTURE-PLAN.md  MULTI-EDITOR-PLAN.md  NUGET-BROWSER-PLAN.md  PACKAGE-MAINTENANCE-PLAN.md  PERFORMANCE-PLAN.md  PROFILER-PLAN.md  REBRAND-PLAN.md  REFERENCES-PLAN.md  RELEASE-PUBLISHING-OIDC-PLAN.md  RIDER-PLUGIN-PLAN.md  SCREENSHOT-FIX-PLAN.md  SIDECAR-IMPLEMENTATION-PLAN.md  SLNX-SUPPORT-PLAN.md  SOLUTION-EXPLORER-CONTEXT-MENUS-PLAN.md  STRUCTURED-FILE-DOM-PLAN.md  TESTING-PLAN.md  TODO.md  VSCODE-REACTIVITY-PLAN.md  ZED-PLAN.md
docs/specs/: BINARY-DEPLOYMENT.md  DEBUGGING-SPEC.md  DEFINITION-SPEC.md  DESIGN-SYSTEM.md  DIAGNOSTICS-SPEC.md  DIAGNOSTICS-STATIC-ANALYZERS-SPEC.md  DISTRIBUTION-SPEC.md  HOVER-SPEC.md  NUGET-BROWSER-SPEC.md  PACKAGE-MAINTENANCE-SPEC.md  PROFILER-SPEC.md  REFERENCES-SPEC.md  RENAME-SPEC.md  RIDER-PLUGIN-SPEC.md  SHARPLSP-SPEC.md  SOLUTION-EXPLORER-SPEC.md  VSCODE-REACTIVITY-SPEC.md  forge-spec.md
editors/: eslint-rules.cjs
editors/rider/: .gitignore  build.gradle.kts  gradle.properties  settings.gradle.kts
editors/vscode/: .vscode-test.mjs  .vscodeignore  README.ja.md  README.md  README.zh-cn.md  clean-out.mjs  esbuild.mjs  eslint.config.mjs  package-lock.json  package.json  package.nls.ja.json  package.nls.json  package.nls.zh-cn.json  shipwright.json  test-cli-runner.cjs  tsconfig.json
editors/zed/: Cargo.toml  extension.toml
editors/zed/src/: lib.rs  project.rs  solution.rs  tree.rs
examples/: Test.csproj  Test.sln  test.cs
scripts/: build-vsix.sh  check-coverage.sh  debug-shipwright.mjs  merge-lcov.mjs  resolve-symlink-stubs.mjs
sidecars/: Forge.Sidecars.sln  SharpLsp.Sidecars.sln
sidecars/Forge.Sidecar.CSharp.Tests/: FeatureEndToEndTests.cs  (+9 more)
src/: call_hierarchy.rs  code_actions.rs  code_lens.rs  config.rs  diagnostics.rs  document_symbols.rs  formatting.rs  handlers.rs  hover_cache.rs  inlay_hints.rs  main.rs  nav_cache.rs  postfix_completion.rs  pull_diagnostics.rs  semantic.rs  semantic_tokens.rs  signature_help.rs  sort_members.rs  syntax.rs  tree_sitter_parse.rs  type_hierarchy.rs  utils.rs  vfs.rs  workspace_symbols.rs
tests/: build_deps_file_e2e.rs  lsp_e2e.rs  nuget_e2e.rs
website/: eleventy.config.js  package-lock.json  package.json  playwright.config.js
(+590 files in other folders)
