[package]
name = "forge-zed"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Forge Zed extension — .NET LSP integration for C# and F#"
publish = false

# Standalone workspace — not part of the root forge-lsp workspace.
# Zed extensions compile to wasm32-wasip1 which is a different target.
[workspace]

[lib]
crate-type = ["cdylib"]

[lints.rust]
dead_code = "deny"
unused_variables = "deny"

[dependencies]
zed_extension_api = "0.7"
