[package]
name = "sharplsp-zed"
version = "0.6.0"
edition = "2021"
license = "MIT"
description = "SharpLsp Zed extension — .NET LSP integration for C# and F#"
publish = false

# Standalone workspace — not part of the root sharplsp workspace.
# Zed extensions compile to wasm32-wasip1 which is a different target.
[workspace]

[lib]
crate-type = ["cdylib"]

[lints.rust]
dead_code = "deny"
unused_variables = "deny"

[dependencies]
quick-xml = "0.38"
zed_extension_api = "0.7"
